# reorch-zhice

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_persistence_governance_fields.py  003_production_scheduling_fact_schema.py
app/: __init__.py  main.py
app/adapters/: __init__.py  base_adapter.py  csv_adapter.py  erp_adapter.py  health_check.py  iot_adapter.py  mapping_schema.py  mapping_validator.py  mes_adapter.py  mock_adapter.py  mock_server.py  rest_adapter.py
app/api/: agents.py  analysis.py  auth.py  cases.py  confirmation.py  demo.py  evidence.py  health.py  incidents.py  ngs_lab.py  planning.py  solver.py  ws.py
app/core/: audit_logger.py  auth.py  config.py  database.py  kafka_consumer.py  kafka_producer.py  kafka_topics.py  rate_limiter.py  redis_client.py  scheduler.py  tasks.py  telemetry.py  worker_entrypoint.py
app/models/: agent.py  base.py  case.py  decision.py  enums.py  evaluation.py  evidence.py  execution.py  explanation.py  impact.py  incident.py  ngs.py  planning.py  recommendation.py  schedule.py  solver.py  strategy.py
app/services/: agent_workflow.py  case_library.py  (+42 more)
benchmark/: README.md  acceptance_criteria.json  constraint_dictionary.json  kpi_dictionary.json
demo/: README.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
portfolio_artifacts/: ReOrch_智策_AI产品作品集_20260603.docx
tools/: build_portfolio_submission.py
(+193 files in other folders)
